Settings screen, Javascript editor, polymer-element tag
git-svn-id: https://plugins.svn.wordpress.org/polymer-components/trunk@1017981 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/polymer-admin.css
+++ b/polymer-admin.css
@@ -4,3 +4,5 @@
  * Author URI: http://blocknot.es
  * License: GPL3
  */
+
+#polymer-settings .form-table  td, #polymer-settings .form-table  th { padding-top: 4px; padding-bottom: 4px; }
