Blocks; shortcode block-url
git-svn-id: https://plugins.svn.wordpress.org/polymer-components/trunk@1029457 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/polymer-admin.css
+++ b/polymer-admin.css
@@ -5,4 +5,14 @@
  * License: GPL3
  */
 
-#polymer-settings .form-table  td, #polymer-settings .form-table  th { padding-top: 4px; padding-bottom: 4px; }
+#polymer-settings .form-table  td, #polymer-settings .form-table  th {
+	padding-top: 4px;
+	padding-bottom: 4px;
+}
+
+#poly-page-options label { font-weight: bold; }
+#poly-page-options .grp {
+	float: left;
+	padding-top: 10px;
+	padding-right: 10px;
+}
